# DTDD_Python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  tox.ini
docsbuilder/: main.py
html/docsbuilder/: index.html  main.html
html/src/: index.html  main.html
src/: __init__.py  main.py
tests/: test_docsbuilder.py
